--- a/Ecommerce_Blazor/Shared/ProductList.razor
+++ b/Ecommerce_Blazor/Shared/ProductList.razor
@@ -1,7 +1,7 @@
 ﻿@inject HttpClient HttpClient
 
 <ul class="list-unstyled">
-    @foreach (var product in Products)
+    @foreach (var product in _products)
     {
         <li class="media my-3">
             <div class="media-img-wrapper mr-2">
@@ -24,11 +24,11 @@
 </ul>
 
 @code {
-    private static List<Product> Products = new List<Product>();
+    private static List<Product> _products = new List<Product>();
     
     protected override async Task OnInitializedAsync()
     {        
-        var result = await HttpClient.GetFromJsonAsync<ServiceResponse<List<Product>>>("api/GetProducts");
-        if (result is {Data: { } }) Products = result.Data;
+        var result = await HttpClient.GetFromJsonAsync<ServiceResponse<List<Product>>>("https://ecommercefunction.azurewebsites.net/api/getproducts");
+        if (result is {Data: { } }) _products = result.Data;
     }
 }
