--- a/Ecommerce_Blazor/Shared/ProductList.razor
+++ b/Ecommerce_Blazor/Shared/ProductList.razor
@@ -1,4 +1,9 @@
-﻿@inject HttpClient HttpClient
+﻿@inject IProductService ProductService
+
+@if (ProductService.Products == null || ProductService.Products.Count == 0)
+{
+    <span>Loading Products...</span>
+}
 
 <ul class="list-unstyled">
     @foreach (var product in _products)
@@ -6,7 +11,7 @@
         <li class="media my-3">
             <div class="media-img-wrapper mr-2">
                 <a href="#">
-                    <img class="media-img" src="@product.ImageUrl" alt="@product.Title" />
+                    <img class="media-img" src="@product.ImageUrl" alt="@product.Title"/>
 
                 </a>
             </div>
@@ -24,11 +29,10 @@
 </ul>
 
 @code {
-    private static List<Product> _products = new List<Product>();
-    
+    private static List<Product> _products = new();
+
     protected override async Task OnInitializedAsync()
-    {        
-        var result = await HttpClient.GetFromJsonAsync<ServiceResponse<List<Product>>>("https://ecommercefunction.azurewebsites.net/api/getproducts");
-        if (result is {Data: { } }) _products = result.Data;
+    {
+        await ProductService.GetProducts();
     }
 }
