--- a/Ecommerce_Blazor/Shared/ProductList.razor.css
+++ b/Ecommerce_Blazor/Shared/ProductList.razor.css
@@ -1,5 +1,4 @@
-﻿.media-img
-{
+﻿.media-img {
     max-height: 200px;
     max-width: 200px;
     border-radius: 6px;
@@ -17,7 +16,7 @@
 }
 
 .media-body {
-    flex: 1;    
+    flex: 1;
 }
 
 .media-img-wrapper {
@@ -33,7 +32,7 @@
     .media {
         flex-direction: column;
     }
-    
+
     .media-img-wrapper {
         width: 100%;
         height: auto;
