messing with configurations

--- a/Ecommerce_Blazor/Shared/ProductList.razor
+++ b/Ecommerce_Blazor/Shared/ProductList.razor
@@ -1,4 +1,5 @@
-﻿@inject IProductService ProductService
+﻿@inject IConfiguration Configuration
+@inject IProductService ProductService
 
 @if (ProductService.Products == null || ProductService.Products.Count == 0)
 {
